Updated Alex Martin bio

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -56,9 +56,9 @@ people:
     description: Angela is a M.Sc. student in Linguistics at the University of Edinburgh. Her research interests include using language data to explore causal models of cognition.
   amartin:
     name: Alexander Martin
-    website: https://www.linkedin.com/in/alexander-david-paul-martin/
+    website: https://alexdmartin.io/
     image: alex-martin.jpg
-    description: Alex is a third-year undergraduate student in Computer Science. His research interests are in natural language understanding, information extraction, and question answering.
+    description: Alex is a third-year undergraduate student in Computer Science. His current research focuses on information extraction and summarizing events.  
   pliu:
     name: Pinxin Liu
     website: 
