--- a/_data/people.yml
+++ b/_data/people.yml
@@ -48,7 +48,7 @@ people:
     name: Angela Cao
     website: https://angelacao8.github.io
     image: angela-c.jpg
-    description: Angela is a M.Sc. student in Linguistics at the University of Edinburgh. Her research interests include using language data to explore causal models of cognition.
+    description: Angela is a second-year PhD student in Linguistics advised by Aaron White. Her research interests include using large-scale language data to build models of human reasoning.
   amartin:
     name: Alexander Martin
     website: https://alexmartin1722.github.io/
