--- a/_data/people.yml
+++ b/_data/people.yml
@@ -33,7 +33,7 @@ people:
     name: Stephanie N. Richter
     website: http://stephrichter.github.io
     image: stephanie-richter.jpg
-    description: Stephanie is a second-year PhD student in Linguistics co-advised by Aaron White and <a href="https://asiapietraszko.com/">Asia Pietraszko</a>. Her current research is focused on statistical models of acceptability, prototypicality, and word sense.
+    description: Stephanie is a fourth-year PhD student in Linguistics co-advised by Aaron White and <a href="https://asiapietraszko.com/">Asia Pietraszko</a>. Her current research is focused on statistical models of acceptability, prototypicality, and word sense.
   cacevesrodriguez:
     name: Constanza Aceves Rodriguez
     website: https://consaceves.github.io/
