Changes Aaron's rank to Associate.

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -12,7 +12,7 @@ people:
     - ellipsis
     - zulu
     - connotate
-    description: Aaron is an Assistant Professor in the Department of Linguistics at the University of Rochester, with a secondary appointment in the Department of Computer Science and an affiliation with the Goergen Institute for Data Science. He directs the FACTS.lab and co-leads the <a href="http://megaattitude.io">MegaAttitude Project</a> and the <a href="http://decomp.io">Decompositional Semantic Initiative</a>.
+    description: Aaron is an Associate Professor in the Department of Linguistics at the University of Rochester, with a secondary appointment in the Department of Computer Science and an affiliation with the Goergen Institute for Data Science. He directs the FACTS.lab and co-leads the <a href="http://megaattitude.io">MegaAttitude Project</a> and the <a href="http://decomp.io">Decompositional Semantic Initiative</a>.
   jgrove:
     name: Julian Grove
     website: http://juliangrove.github.io
