Adds stubs for newer projects.

--- a/_data/research.yml
+++ b/_data/research.yml
@@ -243,3 +243,8 @@ lofi:
       href: "https://journals.linguisticsociety.org/proceedings/index.php/SALT/article/download/30.227/4573"
     - label: "doi"
       href: "https://doi.org/10.3765/salt.v30i0.4816"
+
+cdae: null
+ellipsis: null
+connotate: null
+zulu: null
